Fix: K5 wide image choose box not visible on safari
Safari versions prior to the 15 don't support the aspect-ratio
property, that is why the image seems to have no height when using
this browser, to fix this, the aspect-ratio property was replaced,
now the padding-bottom property is used to calculate the height of
the image based on the parent's width, that allows us to give an
aspect ratio when using percentages

fixes LS-2487
flag= none

Test plan:
- With the safari browser, set up a K5 subject and go to settings
- View the wide image selection box and expect to the box have a
normal height as in any other browser
- Open the choose image option and select an image to upload
-Expect the selected image to be visible in the box and keep the 5:1
ratio

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/271045
QA-Review: Robin Kuss <rkuss@instructure.com>
Product-Review: Jonathan Guardado <jonathan.guardado@instructure.com>
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>

--- a/app/stylesheets/pages/course_settings/_CourseImageSelector.scss
+++ b/app/stylesheets/pages/course_settings/_CourseImageSelector.scss
@@ -19,26 +19,32 @@
 .CourseImageSelector {
   box-sizing: border-box;
   border: 1px solid $ic-border-dark;
-  position: relative;
+  position: absolute;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  margin-bottom: $ic-sp;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
+  width: 100%;
+}
 
+.CourseImageSelectorWrapper{
+  position: relative;
+  margin-bottom: $ic-sp;
   &:not(.wide) {
     height: 146px;
     width: 262px;
   }
   &.wide {
-    aspect-ratio: 5/1;
-    height: auto;
     max-width: 562px;
+    & > .CourseImageSelectorContent{
+      // this gives the element a height of 20% of the width of its parent
+      padding-bottom: 20%;
+    }
   }
 }
-
 .CourseImageSelector__Overlay {
   height: 100%;
   width: 100%;
